[package]
name = "r2d2-async"
version = "0.0.1"
authors = ["Hexilee <hexileee@gmail.com>"]
license = "MIT"
description = "A generic async connection pool"
repository = "https://github.com/Hexilee/r2d2-async"
readme = "README.md"
keywords = ["database", "pool", "async"]

[dependencies]
antidote = "1.0"
log = "0.4"
scheduled-thread-pool = "0.2"
